# youtube-tutorials

./: .gitignore  README.md  pyproject.toml
machine-learning/linear_regression/: main.ipynb
machine-learning/linear_regression/data/: heart_disease.csv
