[project]
name = "tutoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter-resource-usage>=1.2.0",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "spyder-kernels>=3.1.3",
]
